# risc0-solana

./: .gitignore  Cargo.toml  README.md
examples/hello_example/: README.md
examples/hello_example/host/: Cargo.toml
examples/hello_example/host/src/: main.rs
examples/hello_example/methods/: Cargo.toml
examples/hello_example/methods/guest/: Cargo.toml
examples/hello_example/methods/guest/src/: main.rs
examples/hello_example/program/: Cargo.toml  main.ts  package.json
examples/hello_example/program/src/: lib.rs
sol/: .gitignore  Cargo.toml  README.md  bun.lockb  package.json
sol/src/client/: main.ts
sol/src/client/proof-pre-processer/: Cargo.toml
sol/src/client/proof-pre-processer/data/: proof.json  public.json
sol/src/client/proof-pre-processer/src/: main.rs
sol/src/program/: Cargo.toml
sol/src/program/src/: lib.rs
sol/src/risc0-solana/: Cargo.toml  README.md
sol/src/risc0-solana/src/: lib.rs
sol/src/risc0-solana/test/data/: proof.json  public.json  r0_test_vk.json  verification_key.json
sol/src/sol-r0/: receipt.json
sol/src/sol-r0/host/: Cargo.toml
sol/src/sol-r0/host/src/: main.rs
sol/src/sol-r0/methods/guest/: Cargo.toml
sol/test-groth16-sol-lib/: Cargo.toml
sol/test-groth16-sol-lib/src/: main.rs
sol/test-r0-vm/host/: Cargo.toml
sol/test-r0-vm/host/src/: main.rs
sol/test-r0-vm/methods/: Cargo.toml
sol/test-r0-vm/methods/guest/: Cargo.toml
solana-examples/: Anchor.toml  Cargo.toml  README  README.md  package-lock.json  package.json
solana-examples/hello-world/: receipt.json  vp.json
solana-examples/hello-world/host/: Cargo.toml  receipt.json
solana-examples/hello-world/host/src/: main.rs
solana-examples/hello-world/methods/: Cargo.toml  build.rs
solana-examples/hello-world/methods/guest/: Cargo.toml
solana-examples/hello-world/methods/guest/src/: main.rs
solana-examples/hello-world/methods/src/: lib.rs
solana-examples/programs/solana-examples/: Cargo.toml
solana-examples/programs/solana-examples/src/: lib.rs
solana-examples/shared/: Cargo.toml
solana-examples/shared/src/: lib.rs
solana-examples/tests/: solana-examples.ts
solana-ownable/: Cargo.toml
solana-ownable/ownable/: Cargo.toml  README
solana-ownable/ownable-macro/: Cargo.toml
solana-ownable/ownable-macro/src/: lib.rs
solana-ownable/ownable/src/: lib.rs
solana-ownable/test-program/: Anchor.toml
solana-ownable/test-program/programs/test-program/: Cargo.toml
solana-ownable/test-program/programs/test-program/src/: lib.rs
solana-ownable/test-program/tests/: test-program.ts
solana-utils/: Cargo.toml
solana-utils/src/: lib.rs
solana-verifier/: .eslintignore.swp  .gitignore  Anchor.toml  Cargo.toml  README.md  eslint.config.mjs  example.env  package-lock.json  package.json  tsconfig.json
solana-verifier/idl/: groth_16_verifier.json  loader-v3.json  loader-v4.json  test_bad_verifier.json  verifier_router.json
solana-verifier/programs/groth_16_verifier/: Cargo.toml
solana-verifier/programs/groth_16_verifier/src/: client.rs  error.rs  lib.rs  vk.rs
solana-verifier/programs/groth_16_verifier/test/data/: r0_test_vk.json  receipt.json
solana-verifier/programs/test_bad_verifier/: Cargo.toml
solana-verifier/programs/test_bad_verifier/src/: lib.rs
solana-verifier/programs/verifier_router/: Cargo.toml
solana-verifier/programs/verifier_router/src/: lib.rs
solana-verifier/programs/verifier_router/src/estop/: errors.rs  events.rs  mod.rs
solana-verifier/programs/verifier_router/src/router/: error.rs  mod.rs
solana-verifier/programs/verifier_router/src/state/: mod.rs
solana-verifier/scripts/: acceptOwnership.ts  addVerifier.ts  codma.ts  deploy.ts  estop.ts  renounceOwnership copy.ts  renounceOwnership.ts  transferOwnership.ts  utils.ts
solana-verifier/scripts/bad-verifier/: index.ts
solana-verifier/scripts/bad-verifier/errors/: testBadVerifier.ts
solana-verifier/scripts/bad-verifier/instructions/: index.ts  verify.ts
solana-verifier/scripts/bad-verifier/programs/: index.ts  testBadVerifier.ts
solana-verifier/scripts/groth16/errors/: groth16Verifier.ts  index.ts
solana-verifier/scripts/groth16/instructions/: verify.ts
solana-verifier/scripts/groth16/programs/: groth16Verifier.ts
solana-verifier/scripts/groth16/shared/: index.ts
solana-verifier/scripts/loaderV3/instructions/: close.ts  deployWithMaxDataLen.ts  extendProgram.ts  index.ts  initializeBuffer.ts  setAuthority.ts  setAuthorityChecked.ts  upgrade.ts  write.ts
solana-verifier/scripts/loaderV3/programs/: index.ts  solanaLoaderV3Program.ts
solana-verifier/scripts/loaderV4/instructions/: deploy.ts  finalize.ts  index.ts  retract.ts  transferAuthority.ts  truncate.ts  write.ts
solana-verifier/scripts/loaderV4/programs/: index.ts  solanaLoaderV4Program.ts
solana-verifier/scripts/utils/: addVerifier.ts  deploy.ts  estop.ts  fireblocksSigner.ts  init.ts  ownership.ts  utils.ts
solana-verifier/scripts/verify-router/accounts/: index.ts  verifierEntry.ts  verifierRouter.ts
solana-verifier/scripts/verify-router/errors/: verifierRouter.ts
solana-verifier/scripts/verify-router/instructions/: acceptOwnership.ts  addVerifier.ts  cancelTransfer.ts  emergencyStop.ts  emergencyStopWithProof.ts  index.ts  initialize.ts  renounceOwnership.ts  transferOwnership.ts  verify.ts
solana-verifier/scripts/verify-router/programs/: index.ts  verifierRouter.ts
solana-verifier/scripts/verify-router/types/: emergencyStopEvent.ts  index.ts  ownership.ts  proof.ts
solana-verifier/tests/: new-tests.ts  router-verifier.ts
src/: lib.rs
test/data/: r0_test_proof.json  r0_test_public.json  receipt.json
