[package]
name = "risc0-solana"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/risc0-solana"

[lib]
path = "src/lib.rs"

[workspace]
resolver = "2"
members = [
    "examples/hello_example/host",
    "examples/hello_example/methods",
    "examples/hello_example/program",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://risczero.com/"
repository = "https://github.com/risc0/risc0-solana"

# Patch zerorize, see: https://github.com/solana-labs/solana/issues/26688
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/ivs/curve25519-dalek", branch = "rustls-dep-hell" }
aes-gcm-siv = { git = "https://github.com/ivs/AEADs", branch = "rustls-dep-hell" }

[dependencies]
anyhow = "1.0.86"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
arrayvec = "0.7.4"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
risc0-zkp = "1.0.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
solana-program = "=1.18.20"
