[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "=1.18.20"
risc0-solana = { path = "../../.." }
serde = "1.0.195"
serde_json = "1.0.111"

[dev-dependencies]
ark-std = "0.4.0"
array-bytes = "6.2.2"
serde = "1.0.195"
serde_json = "1.0.111"
risc0-zkvm = { version = "1.0.5", default-features = false }

[lib]
crate-type = ["cdylib", "lib"]
