[package]
name = "risc0-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
arrayvec = "0.7.4"
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = {version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
solana-program = "=1.17.14"

