[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = {path = "/Users/hans/github.com/risc0/risc0/risc0/zkvm"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
anyhow = "1.0.86"
risc0-circuit-recursion = {path = "/Users/hans/github.com/risc0/risc0/risc0/circuit/recursion"}
# risc0-groth16 = "1.0.3"
risc0-groth16 = {path = "/Users/hans/github.com/risc0/risc0/risc0/groth16"}
risc0-zkp = {path = "/Users/hans/github.com/risc0/risc0/risc0/zkp"}
# risc0-solana = { path = "/Users/hans/github.com/risc0/scratch/dev/hmrtn/sol/src/risc0-solana"}
# risc0-zkp = "1.0.3"
hex = "0.4.3"
