[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
solana-examples = { path = "../../programs/solana-examples", features = ["no-entrypoint"] }
anchor-client = { version = "0.30.1" }
serde_json = "1.0.133"
solana-program = "=1.18.20"


# Patch zerorize, see: https://github.com/solana-labs/solana/issues/26688
[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/ivs/curve25519-dalek', branch='rustls-dep-hell' }