[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.0", default-features = false, features = ["prove"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
solana-examples = { path = "../../programs/solana-examples", features = ["no-entrypoint"] }
groth_16_verifier = { path = "../../../solana-verifier/programs/groth_16_verifier", features = ["no-entrypoint", "client"]}
verifier_router = { path = "../../../solana-verifier/programs/verifier_router", features = ["no-entrypoint"]}
anchor-client = { version = "0.30.1", features = ["async"]}
serde_json = "1.0.133"
solana-program = "2.1.6"
tokio = { version = "1.42.0", features = ["macros"] }
tracing = "0.1.41"
clap = { version = "4.5.23", features = ["derive"] }


# Patch zerorize, see: https://github.com/solana-labs/solana/issues/26688
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/ivs/curve25519-dalek", branch = "rustls-dep-hell" }
