[package]
name = "solana-examples"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_examples"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
verifier_router = { path = "../../../solana-verifier/programs/verifier_router", features = ["cpi"] }
methods = { path = "../../hello-world/methods"}
shared = { path = "../../shared" }
