[package]
name = "groth_16_verifier"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groth_16_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
client = [ "anyhow", "ark-bn254", "ark-serialize"]

[dependencies]
anchor-lang = "0.30.1"
hex = "0.4.3"
num-bigint = "0.4.6"
risc0-zkp = { path = "/Users/hans/github.com/risc0/risc0/risc0/zkp", default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
solana-program = "=2.1.6"
risc0-zkvm = { path = "/Users/hans/github.com/risc0/risc0/risc0/zkvm", default-features = false}
anyhow = { version = "1.0.95", optional = true }
ark-bn254 = { version = "0.4.0", optional = true }
ark-serialize = { version = "0.4.2", optional = true }
serde_json = "1.0.135"
bytemuck = "1.21.0"

[dev-dependencies]
risc0-zkvm = {path = "/Users/hans/github.com/risc0/risc0/risc0/zkvm", default-features = false }
serde_json = "1.0.120"
anyhow = { version = "1.0.95" }
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"