[package]
name = "groth_16_verifier"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groth_16_verifier"

[features]
client = ["dep:risc0-zkvm", "dep:anyhow", "dep:ark-serialize", "dep:ark-bn254", "dep:num-bigint", "dep:serde"]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.1"
anyhow = { version = "1.0.95", optional = true }
ark-bn254 = { version = "0.4.0", optional = true }
ark-serialize = { version = "0.4.2", optional = true }
hex-literal = "0.4.1"
num-bigint = { version = "0.4.6", optional = true }
risc0-zkp = { version = "1.2.0", default-features = false } 
risc0-zkvm = { version = "1.2.0", default-features = false, optional = true }
serde = { version = "1.0.204", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.95"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
num-bigint = "0.4.6"
risc0-zkvm = { version = "1.1.1", default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
