[package]
name = "verifier_router"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verifier_router"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
ownable = { path = "../../../solana-ownable/ownable"}
groth_16_verifier = { path = "../groth_16_verifier", features = ["cpi"] }

