[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0.118"
bonsai-sdk = "0.8.0"
anyhow = "1.0.86"
hex = "0.4.3"
bytemuck = "1.16.1"
bincode = "1.3.3"
